--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
-<h1>Favorite Starwars Movies</h1>
-
-<ul>
-    <li>Episode I: The Phantom Menace (1999)</li>
-    <li>Episode II: Attack of the Clones (2002)</li>
-    <li>Star Wars: The Clone Wars (2008-2020)</li>
-    <li>Episode III: Revenge of the Sith (2005)</li>
-    <li>Solo: A Star Wars Story (2018)</li>
-</ul>
-
-
-
-<a href="https://ibb.co/VqyMyLH"><img src="https://i.ibb.co/ZMscsfH/Screen-Shot-2022-01-25-at-4-13-42-PM.jpg" alt="Screen-Shot-2022-01-25-at-4-13-42-PM" border="0"></a>
-
-<p>Original Star Wars Logo </p>
-
-<p>I enjoy StarWars because of the outerspace elements. Sience fiction shows and movies are entertaining to watch in general. Star Wars is a global iconic film and tv show series.</p>
+<!--  -->
+<!DOCTYPE html>
+<html>
+<head>
+    <link href='/lab04.css' rel='stylesheet' type ='text/css'>
+    <meta charset="UTF-8">
+    </head>
+<body>
+    <header>
+<h1>Favorite Star Wars Movies</h1>
+    </header>
+    <main>
+    <ul>
+        <li>Episode I: The Phantom Menace (1999)</li>
+        <li>Episode II: Attack of the Clones (2002)</li>
+        <li>Star Wars: The Clone Wars (2008-2020)</li>
+        <li>Episode III: Revenge of the Sith (2005)</li>
+        <li>Solo: A Star Wars Story (2018)</li>
+    </ul>
+    </main>
+    <a href="https://ibb.co/VqyMyLH"><img src="https://i.ibb.co/ZMscsfH/Screen-Shot-2022-01-25-at-4-13-42-PM.jpg" alt="Screen-Shot-2022-01-25-at-4-13-42-PM" border="0"></a>
+    <div id = "logo">
+    <p>Original Star Wars Logo </p>
+    </div>
+    <footer>
+    <p>I enjoy Star Wars because of the outerspace elements. Sience fiction shows and movies are entertaining to watch in general. Star Wars is a global iconic film and tv show series.</p>
+    </footer>
+</body>
+</head>
