--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <footer>
     <p>I enjoy Star Wars because of the outerspace elements. Sience fiction shows and movies are entertaining to watch in general. Star Wars is a global iconic film and tv show series.</p>
     </footer>
+    <script type="text/javascript" src="script.js"></script> 
 </body>
-</head>
+</html>
