--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <a href="https://ibb.co/VqyMyLH"><img src="https://i.ibb.co/ZMscsfH/Screen-Shot-2022-01-25-at-4-13-42-PM.jpg" alt="Screen-Shot-2022-01-25-at-4-13-42-PM" border="0"></a>
     <div id = "logo">
     <p>Original Star Wars Logo </p>
-    </div>
+    </div> 
+    <div id="img"></div>
     <footer>
     <p>I enjoy Star Wars because of the outerspace elements. Sience fiction shows and movies are entertaining to watch in general. Star Wars is a global iconic film and tv show series.</p>
     </footer>
